# blog-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
resources/: development.ini
src/: .env.development  config.py  main.py  pyproject.toml
src/app/: __init__.py  _mixins.py
src/app/blog/: __init__.py  crud.py  models.py  schema.py  urls.py
src/app/user/: __init__.py  crud.py  models.py  schema.py  urls.py
src/database/: __init__.py  connection.py
src/migrations/models/: 1_20221002223657_update_migration.py
src/resources/: __init__.py  helper.py
src/tests/: conftest.py  test_blog.py  test_user.py
